# SSBL

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootloader_config.h  bootloader_utility.c  bootloader_utility.h  esp_partition.c  esp_partition.h  example_log  note.md  ota.c  ota.csv  ota_utility.c  partition.c  partition.h  pi_errno.h  pi_flash_partition.c  pi_flash_partition.h  pi_partition.c  pi_partition.h  ssbl-GAP8-gvsoc.ld  ssbl-GAP8.ld  ssbl.c  todo.md  traces.h  updater.c  updater.h
app/: Makefile  app.c
bsp/: bootloader_utility.h  ota.h  ota_utility.h
factory/: Makefile  factory.c  ota.csv
